vpc.json
{
    "AWSTemplateFormatVersion" : "2010-09-09",
    "Description" : "This my vpc",
    "Parameters" : {},
    "Resources"  : {
        
        "MyVPC": {
          "Type": "AWS::EC2::VPC",
          "Properties": {
            "CidrBlock": "192.168.0.0/16"
          }
        },
        "mygate": {
          "Type": "AWS::EC2::InternetGateway"
          },
        "AttachGateway": {
          "Type": "AWS::EC2::VPCGatewayAttachment",
          "Properties": {
            "VpcId": 
            { "Ref": "MyVPC" },
            "InternetGatewayId": { "Ref": "mygate" }
          }
        },
        
        "publicsubnet": {
          "Type": "AWS::EC2::Subnet",
          "Properties": {
            "AvailabilityZone": "ap-south-1a",
            "VpcId":
            { "Ref": "MyVPC" }
            ,
            "CidrBlock": "192.168.1.0/24"
          }
        },
        
        "publicroutetable": {
          "Type": "AWS::EC2::RouteTable",
          "Properties": {
            "VpcId":
            { "Ref": "MyVPC" }
            }
        },
        
        "pubicrtbassociate": {
          "Type": "AWS::EC2::SubnetRouteTableAssociation",
          "Properties": {
            "SubnetId":
            { "Ref": "publicsubnet" }
            ,
            "RouteTableId":
            { "Ref": "publicroutetable" }
            
          }
        },
        
        "routeName": {
          "Type": "AWS::EC2::Route",
          "Properties": {
            "RouteTableId":
            { "Ref": "publicroutetable" },
            "DestinationCidrBlock": "0.0.0.0/0",
            "GatewayId": 
            { "Ref": "mygate" }
            
          }
        },
        
        "privatesubnet": {
          "Type": "AWS::EC2::Subnet",
          "Properties": {
            "AvailabilityZone": "ap-south-1a",
            "VpcId": 
            { "Ref": "MyVPC" }
            ,
            "CidrBlock": "192.168.2.0/24"
          }
        },
        
        "privaterouttable": {
          "Type": "AWS::EC2::RouteTable",
          "Properties": {
            "VpcId":
            { "Ref": "MyVPC" }
          }
        },
        
        "privatertbassociation": {
          "Type": "AWS::EC2::SubnetRouteTableAssociation",
          "Properties": {
            "SubnetId":
            { "Ref": "privatesubnet" }
            ,
            "RouteTableId":
            { "Ref": "privaterouttable" }
            
          }
        },
        
        "myEIP": {
          "Type": "AWS::EC2::EIP"
          },
          "myNat" : {
           "Type" : "AWS::EC2::NatGateway",
           "Properties" : {
             "AllocationId" : { "Fn::GetAtt" : ["myEIP", "AllocationId"] },
              "SubnetId" : { "Ref" : "publicsubnet" }
          }
        },
        
        "privateroute": {
          "Type": "AWS::EC2::Route",
          "Properties": {
            "RouteTableId":
            { "Ref": "privaterouttable" }
            ,
            "DestinationCidrBlock": "0.0.0.0/0",
            "NatGatewayId": 
            { "Ref": "myNat" }
            
          }
        }
        
        
        },
    "Outputs" : {}
}
